tests/negative/generics/const-fn-anonymous.orng
fn (const n: Int) -> Int {
    n + 4
}

fn main() -> Char {
    'd'
}
